[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DianaApi"
version = "1.0.0"
description = "Diana Robot Python SDK"
authors = [{name = "Zilong Huang"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["DianaApi"]

[tool.setuptools.package-data]
DianaApi = ["*.so"]
